SigmaCodebackup3rdSep/objects/Inventory_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ILPLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILPLI</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Inventory Allocations</relationshipLabel>
        <relationshipName>Inventory_Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Inventory Allocations</relationshipLabel>
        <relationshipName>Inventory_Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Inventory Allocations</relationshipLabel>
        <relationshipName>Inventory_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaged_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaged Product</label>
        <referenceTo>PackagedProducts__c</referenceTo>
        <relationshipLabel>Inventory Allocations</relationshipLabel>
        <relationshipName>Inventory_Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picked_Quantity__c</fullName>
        <label>Picked Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picking</label>
        <referenceTo>Picking_Slip__c</referenceTo>
        <relationshipLabel>Inventory Allocations</relationshipLabel>
        <relationshipName>Inventory_Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Printed</fullName>
                </value>
                <value>
                    <fullName>Picking In Progress</fullName>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_In_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used In Package</label>
        <type>Checkbox</type>
    </fields>
    <label>Inventory Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Inventory Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>